# deal-maker

./: Cargo.toml  README.md  docker-compose.yml
migrations/2023-09-18-125008_create_agreement/: down.sql  up.sql
migrations/2023-09-19-104226_create_user/: up.sql
migrations/2023-09-19-104304_create_agreement/: up.sql
migrations/2023-09-19-140011_tables/: down.sql  up.sql
migrations/2023-09-20-083350_create_tables/: down.sql  up.sql
src/: main.rs  types.rs
src/database/: agreement_queries.rs  document_queries.rs  lib.rs  mod.rs  models.rs  schema.rs  users_queries.rs
src/database/queries/: deal_queries.rs  document_queries.rs  document_request_queries.rs  lender_queries.rs  mod.rs  users_queries.rs
src/routes/: agreement.rs  borrower.rs  deal.rs  document.rs  document_request.rs  lender.rs  mod.rs  users.rs
