[package]
name = "learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.1.0", features = ["postgres"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"